# sonic-telemetry

./: .gitignore  Makefile  Makefile.am  NEWS  README.md  azure-pipelines.yml  configure.ac  glide.yaml  go.mod  go.sum  new_vpath.go  package.cfg  schema
cfg/: dn-chassis  dn-node
common_utils/: context.go
debian/: changelog  control
doc/: dialout.md  gNMI_usage_examples.md  grpc_telemetry.md  syslogPipeline.md
gnmi_server/: client_subscribe.go  constants.go  constants_readonly.go  gnoi.go  jwtAuth.go  server.go  server_test.go
gnoi_client/: gnoi_client.go
new_sonic_data_client/: handler_func.go  handler_pfc_counter.go  handler_pfcwd.go  handler_port_counter.go  handler_queue_counter.go  map_init.go  path.go
patches/: gnmi_cli.all.patch
sonic_data_client/: bgp.go  db_client.go  non_db_client.go  path.go  path_test.go  system.go  transl_data_client.go  virtual_db.go  virtual_db_test.go  vpath.go  vpath_test.go
sonic_db_config/: db_config.go  db_config_test.go
telemetry/: telemetry.go
test/: acl_get.result  acl_get.test  acl_set.result  acl_set.test  ethernet_oper_status_subscribe.result  ethernet_oper_status_subscribe.test  interface_get.result  interface_get.test  interfaces_get.result  interfaces_get.test  lldp_neighbor_subscribe.result  lldp_neighbor_subscribe.test
test_utils/: test_utils.go
testdata/: CONFIG_PFCWD_PORTS.txt  COUNTERS:Ethernet68:Queues.txt  COUNTERS:Ethernet68:Queues_alias.txt  COUNTERS:Ethernet_wildcard_PFC_7_RX_alias.txt  COUNTERS:Ethernet_wildcard_Queues_alias.txt  COUNTERS:Ethernet_wildcard_alias.txt  db_dump.json  (+5 more)
(+50 files in other folders)
